style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: coral;
    height: 100%
}


.container {
    display: flex;
    justify-content: center;
    justify-items: center;
    align-content: center;
    align-items: center;
    height: 100vh;
    margin: 0 auto;
}



.top-sect {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    font-family: sans-serif;
    color: rgb(44, 35, 35);
    background-color: rgb(255, 255, 255);
    border-radius: 20px 20px 0 0;
    box-sizing: border-box;
    padding: 20px;
    height: 200px;
    margin: 0 auto;
}



.fa-solid {
    color: rgb(39, 39, 39);
    font-size: 5em;
    margin: auto;
}


.last-row {
    display: flex;
    margin: 0 auto;
}

.mid-sect {
    display: flex;
    justify-content: center;
    padding-bottom: 1em;
}

.weather-desc {
    padding-left: 0.7em;
}

.last-row p {
    display: flex;
    justify-content: center;
    text-align: center;
    width: 100%;
}



.bot-sect {
    color: white;
    font-family: sans-serif;
    background-color: rgb(39, 39, 39);
    border-radius: 0px 0px 20px 20px;
    padding: 10px;
    margin: 0 auto;
}


#fname {
    text-align: center;
    font-family: sans-serif;
    background-color: rgb(224, 224, 224);
    border-radius: 0.8em;
    border-style: none;
    padding: 0.3em;
    margin: 0.2em;
}

